--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -6,3 +6,37 @@ Green: #00B172
 White: #FFF
 
 */
+*{
+    margin: .0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+header {
+    background-color: white;
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 30px;
+}
+body {
+    background-color: beige;
+}
+main{
+    background-color: lightgreen;
+    padding: 1rem;
+    text-align: center;
+    background-image: url(../images/high-quality-icon.png) ;
+}
+li {
+    list-style: none;
+}
+.navegacion {
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+    align-items: center;
+    }
+    nav{
+        display: flex;
+        gap: 10px;
+    }
